--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/luxon": "^2.11.1",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.4",
+    "@material-ui/lab": "^5.0.0-alpha.43",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.0",
+    "date-fns": "^2.23.0",
+    "emotion": "^11.0.0",
+    "luxon": "^2.0.2",
+    "material-ui": "^0.20.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-date-range": "^1.3.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
@@ -37,5 +50,6 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/static"
+  "homepage": "/static",
+  "devDependencies": {}
 }
