--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-date-range": "^1.3.0",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.11"
