--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^5.1.0",
     "date-fns": "^2.23.0",
     "emotion": "^11.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-date-range": "^1.3.0",
     "react-dates": "^21.8.0",
