--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "date-fns": "^2.23.0",
     "emotion": "^11.0.0",
