--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-date-range": "^1.3.0",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
