--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "date-fns": "^2.23.0",
     "emotion": "^11.0.0",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-date-range": "^1.3.0",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
+    "react-google-material-icons": "^1.0.4",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
