--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-backend\thumbnail_pics
-backend\__pycache__
+thumbnail_pics
 __pycache__
 
 site.db
