--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,19 @@
 attrs==21.2.0
+bcrypt==3.2.0
+Bcrypt-Flask==1.0.2
 certifi==2021.5.30
+cffi==1.14.6
 charset-normalizer==2.0.4
 click==7.1.2
 clickclick==20.10.2
 colorama==0.4.4
 connexion==2.9.0
+cryptography==3.4.8
 decorator==4.4.2
+ecdsa==0.17.0
 Flask==1.1.4
+Flask-Bcrypt==0.7.1
+Flask-Compressor==0.2.0
 Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.5.1
@@ -18,6 +25,7 @@ inflection==0.5.1
 isodate==0.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jose==1.0.0
 jsonschema==3.2.0
 MarkupSafe==2.0.1
 marshmallow==3.13.0
@@ -27,9 +35,13 @@ openapi-schema-validator==0.1.5
 openapi-spec-validator==0.3.1
 Pillow==8.3.1
 proglog==0.1.9
+pyasn1==0.4.8
+pycparser==2.20
 pyrsistent==0.18.0
+python-jose==3.3.0
 PyYAML==5.4.1
 requests==2.26.0
+rsa==4.7.2
 six==1.16.0
 SQLAlchemy==1.4.23
 swagger-ui-bundle==0.0.8
