--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,8 @@ flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 flask-cors = "*"
 moviepy = "*"
+flask-bcrypt = "*"
+jose = "*"
 
 [dev-packages]
 
